Added clientId parameter to units endpoint
